removed the compression part in logic.